<resources>

    <!--
    Can update as needed throughout development phase, just remember to select and use the
    refactor option when editing in Android Studio to reflect changes across the project.
    Please double check that any changes does not break any behaviour or functionality
    -->

    <!-- app name -->
    <string name="app_name">Smart Air</string>

    <!-- Global Strings -->
    <!--
    some commonly used strings, can update throughout development phase as needed
    -->
    <string name="usernameField">Username:</string>
    <string name="usernameHint">myUsernameExample123</string>
    <string name="emailField">Email:</string>
    <string name="emailHint">johnsmith123@example.com</string>
    <string name="usernameEmailField">Email/Username:</string>
    <string name="pwField">Password:</string>
    <string name="pwFieldConfirm">Confirm Password:</string>
    <string name="pwHint">password123</string>
    <string name="register">Create New Account</string>
    <string name="logout">Logout</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="firstNameField">First name:</string>
    <string name="middleNameField">Middle name(s):</string>
    <string name="lastNameField">Last name:</string>
    <string name="birthdayField">Birthday:</string>
    <string name="dayField">Day:</string>
    <string name="monthField">Month:</string>
    <string name="yearField">Year:</string>
    <string name="sexField">Sex:</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="dashboard">Dashboard</string>

    <string-array name="sexOptions">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!-- Login Fragment -->
    <string name="login_screenID">Smart Air Login</string>
    <string name="login_login">Login</string>
    <string name="login_accountRecovery">Account Recovery</string>

    <!-- Register Fragment -->
    <string name="register_screenID">Create Smart Air Account</string>
    <string name="register_spinnerLabel">Account Type:</string>

    <string-array name="register_accountTypeSpinner">
        <item>Parent</item>
        <item>Healthcare Provider</item>
    </string-array>

    <!-- Manage Child Fragment -->
    <string name="manageChilde_addChild_screenID">Add Child</string>
    <string name="manageChild_createChildAccount">Create Child Account</string>

    <!-- Child History Fragment -->
    <string-array name="logTypeArray">
        <item>Daily Check-In</item>
        <item>Controller</item>
        <item>Rescue</item>
        <item>PEF</item>
        <item>Triage</item>
    </string-array>

    <string-array name="historyRangeArray">
        <item>Last 30 days</item>
        <item>Last 60 days</item>
        <item>Last 90 days</item>
        <item>Last 120 days</item>
        <item>Last 150 days</item>
        <item>Last 180 days</item>
    </string-array>

    <string-array name="symptomFilters">
        <item>Night waking</item>
        <item>Cough/wheeze</item>
    </string-array>

    <string-array name="triggerFilters">
        <item>Exercise</item>
        <item>Cold air</item>
        <item>Dust</item>
        <item>Pets</item>
        <item>Smoke</item>
        <item>Illness</item>
        <item>Cleaners</item>
        <item>Perfume / Strong odors</item>
    </string-array>

    <!-- Other Fragments -->
    <string name="PLACEHOLDER">PLACEHOLDER</string>
    <string name="LOGIN_SUCCESS">LOGIN SUCCESS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>