<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterFragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/bg2">

    <!-- Screen Identifier -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_screenID"
        android:textSize="32sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_registerField"/>

    <!-- Account Registration -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_registerField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:background="@color/bg1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Email Entries -->

        <TextView
            android:id="@+id/login_emailField"
            android:text="@string/emailField"
            android:textSize="@dimen/fontSizeDefault"
            android:padding="@dimen/default_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" /><!-- Email Field -->

        <EditText
            android:id="@+id/login_emailEntry"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/fontSizeDefault"
            android:layout_width="0dp"
            android:layout_height="48dp"

            app:layout_constraintStart_toEndOf="@id/login_pwField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/login_emailField" /><!-- Email Entry -->

        <!-- Password Entries -->

        <TextView
            android:id="@+id/login_pwField"
            android:text="@string/pwField"
            android:textSize="@dimen/fontSizeDefault"
            android:padding="@dimen/default_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            app:layout_constraintTop_toBottomOf="@id/login_emailField"
            app:layout_constraintStart_toStartOf="parent" /><!-- PW Field -->

        <EditText
            android:id="@+id/login_pwEntry"
            android:hint="@string/pwHint"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/fontSizeDefault"
            android:layout_width="0dp"
            android:layout_height="48dp"

            app:layout_constraintStart_toEndOf="@id/login_pwField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/login_pwField" /><!-- PW Entry -->

        <TextView
            android:id="@+id/login_pwFieldConfirm"
            android:text="@string/pwFieldConfirm"
            android:textSize="@dimen/fontSizeDefault"
            android:padding="@dimen/default_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            app:layout_constraintTop_toBottomOf="@id/login_pwField"
            app:layout_constraintStart_toStartOf="parent" /><!-- Confirm PW Field -->

        <EditText
            android:id="@+id/login_pwEntryConfirm"
            android:hint="@string/pwHint"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/fontSizeDefault"
            android:layout_width="0dp"
            android:layout_height="48dp"

            app:layout_constraintStart_toEndOf="@id/login_pwFieldConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/login_pwFieldConfirm" /><!-- Confirm PW Entry -->

        <!-- Account Type Spinner -->

        <TextView
            android:id="@+id/register_spinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="@dimen/default_padding"
            android:text="@string/register_spinnerLabel"
            android:textSize="@dimen/fontSizeDefault"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_pwFieldConfirm"/>

        <Spinner
            android:id="@+id/register_accountTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"

            app:layout_constraintBaseline_toBaselineOf="@id/register_spinnerLabel"
            app:layout_constraintStart_toEndOf="@id/register_spinnerLabel"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Buttons -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="@dimen/fontSizeDefault"
        android:padding="@dimen/default_padding"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/register_registerField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/><!-- Create Account Button -->

</androidx.constraintlayout.widget.ConstraintLayout>